--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Roboto Mono font import Thin 100, Light 300, Regular 400, Medium 500, SemiBold 600, Bold 700 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Newtraveling</title>
   </head>
   <body>
