Content and ✨ Styles ✨ ADD to Home Page

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,14 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <!--Poppins font import Regular 400 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <title>Newtraveling</title>
   </head>
   <body>
