--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,11 @@
       rel="stylesheet"
     />
 
-    <!--Poppins font import Regular 400 -->
+    <!--Poppins font import Regular 400, ExtraBold 800 -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap"
       rel="stylesheet"
     />
     <title>Newtraveling</title>
